# LudumDare25

./: CMakeLists.txt  README  run_cmake.sh
Core/: graphics.cpp  graphics.h
libs/Chipmunk-6.1.2/src/: Makefile  cmake_install.cmake  libchipmunk.so.6.1.2
res/: res_graphics
res/config/: ship_properties.yaml
src/: main.cpp
src/core/: areaEffect.hpp  delayedExplosion.cpp  delayedExplosion.hpp  destroyable.cpp  destroyable.hpp  drawing.hpp  entity.cpp  entity.hpp  gameHandler.cpp  gameHandler.hpp  gameModel.cpp  gameModel.hpp  motherShip.cpp  motherShip.hpp
src/enemies/: enemies.cpp  enemies.h
src/event_handler/: event_handler.cpp  event_handler.h
src/game_objs/: projectile.cpp  projectile.hpp
src/particle_handler/: particle.cpp  particle.h
src/res_handler/: res_handler.cpp  res_handler.h
src/various/: common.h
